# ethos

./: .env.example  .gitignore  CLAUDE.md  SETUP-CHECKLIST.md  index.html  next.config.mjs  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
.planning/: MILESTONE-AUDIT.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  UAT.md  v2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1-REQUIREMENTS.md  v1-ROADMAP.md  v2-REQUIREMENTS.md  v2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: DATA-MODEL-LLM.md  LLM-NATIVE-ARCHITECTURE.md  MIGRATIONS.md
scripts/: enrich-content.mjs  seed-demo.mjs  seed-leaderboard.mjs  seed-questions.js  seed-search.mjs
src/: App.jsx  main.jsx  middleware.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: error.jsx  globals.css  layout.jsx  loading.jsx  page.jsx  robots.js  sitemap.js
src/components/: AddQuestion.jsx  AnswerCard.jsx  AnswerForm.jsx  ApiKeyManager.jsx  Avatar.jsx  BookmarkButton.jsx  BudgetIndicator.jsx  CommentSection.jsx  DeleteAccountSection.jsx  EditProfileForm.jsx  EditableAnswerCard.jsx  EmailPreferencesForm.jsx  ExpertInvites.jsx  ExportButton.jsx  FlaggedView.jsx  FollowButton.jsx  FollowButtonSmall.jsx  FollowTopicButton.jsx  Footer.jsx  Header.jsx  HeaderAuth.jsx  HistoryView.jsx  (+15 more)
supabase/: config.toml  seed.sql
(+254 files in other folders)
