[package]
name = "ethos"
version = "1.0.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"

[lib]
name = "ethos_lib"
crate-type = ["lib", "cdylib", "staticlib"]
